test/types/file/unableToOpenFile.good
unableToOpenFile.chpl:1: error: Unhandled system error: No such file or directory (2)
